<resources>
    <string name="unable_login">Trouble logging in?</string>
    <string name="logo">minitrainer logo</string>
    <string name="tab_register">Register</string>
    <string name="tab_login">Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_reg_username">Choose a username</string>
    <string name="hint_reg_password">And a password</string>
    <string name="hint_reg_email">Your email address</string>
    <string name="button_register">Begin!</string>
    <string name="button_login">Go!</string>
    <string name="chbox_save_dets">Remember me</string>
    <string name="text_recovery_info">Account details will be sent to your email address</string>
    <string name="app_name">Minitrainer</string>
    <string name="app_logo">Minitrainer_logo</string>
    <string name="menu_settings">Settings</string>
    <string name="button_exDiets">Exercises and Diets</string>
    <string name="button_prof">Profile</string>
    <string name="button_activities">Activities</string>
    <string name="button_prefs">Preferences</string>
    <string name="stepX">1/4</string>
    <string name="text_warmup">Warm up</string>
    <string name="text_pushups">Simple push-ups</string>
    <string name="text_crunches">Crunches</string>
    <string name="text_squats">Squats</string>
    <string name="text_abs_wout">Abs workout</string>
    <string name="text_mountain_climbers">Mountain climbers</string>
    <string name="text_pushups_singleLegRaise">Push-ups with single-leg raise</string>
    <string name="text_frogPullovs">Frog pullovers</string>
    <string name="text_stabBallPushups">Stability ball push-ups</string>
    <string name="text_ex0_step1">You should spend at least 5 minutes on this warm-up routine. You may warm up for longer if you want.\n\nStart off marching on the spot and then march forwards and backwards.</string>
    <string name="text_ex0_step2">Keep marching and start rolling your shoulders.\nRoll your shoulders forwards five times and backwards five times, then repeat one more time.\nLet your arms hang loose by your sides. </string>
    <string name="text_ex0_step3">Next, do a quad stretch - grasp your ankle and gently pull your heel up and back until you feel a stretch in the front of your thigh.\nStand tall, keep knees together and avoid leaning to the side.\nKeep a slight bend in the supporting leg.</string>
    <string name="text_ex0_step4">Next, stretch your chest - clasp hands behind your back with palms facing up.\nPull hands down and try to bring shoulder blades together.\nYour chest should stick out. Do not arch your back.</string>
    <string name="text_ex0_step5">Next, do an upper back stretch - round the back, extend arms in front of you. Clasp hands together, palms facing in.\nDrop your head.\nFocus on increasing the gap between your hands and chest, feeling your shoulders stretching across your back. </string>
    <string name="text_ex0_step6">Finally, do the tricep stretch - place your hand on your upper back with the elbow bend upwards. Use other hand to pull the elbow towards your head to feel the stretch.\nDo not hold the elbow joint and do not arch your back. Repeat with the other arm.</string>
    <string name="text_ex1_step1">Suggested number of reps: 20 \n\nTake a prone position on the floor or other rigid surface that\'s able to support your body weight.\nKeep your feet together!</string>
    <string name="text_ex1_step2">Position hands palms-down on the floor, approximately shoulder width apart.\nRaise yourself using your arms then lower your torso to the ground until your elbows form a 90 degree angle.</string>
    <string name="text_ex1_step3"></string>
    <string name="text_ex2_step1">Suggested number of reps: 20 \n\nLie on your back on the floor and bend your knees.\nYour feet can be flat on the floor, or you can keep them suspended in the air during your crunches for a little extra crunch.</string>
    <string name="text_ex2_step2">Cross your arms in front of your chest.\nYour head and neck should be resting on your hands.</string>
    <string name="text_ex2_step3">Curl your back to lift your shoulders towards the ceiling (not towards your knees) using strictly your abdominal muscles. </string>
    <string name="text_ex3_step1">Suggested number of reps: 20 \n\nSet your legs apart, while keeping your weight on your heels.\nKeep your chest up!</string>
    <string name="text_ex3_step2">Gradually push your hips back towards the floor.\nYour hips should move before your knees bend.\nWedge your elbows in between your knees at the bottom point of the movement.</string>
    <string name="text_ex3_step3">Initiate the second part of the move by driving your hips forward to return to the start position</string>
    <string name="text_ex4_step1">Suggested number of reps: 15–20\n\nStart with your body flat on your back.</string>
    <string name="text_ex4_step2">Stretch your hands backwards and raise your feet 6 inches(15cm) from the ground.</string>
    <string name="text_ex4_step3">Begin by gradually bringing your arms forward towards your knee and at the same time raise your legs up to a 45 degree angle.\nSlowly return both hands and legs to the start position and repeat this for the required sets.</string>
    <string name="text_ex5_step1">Suggested number of reps: 10–20 \n\nBegin with a hands and knees position with your toes pointed toward the floor.\nBring your left knee forward and place it on the floor under your chest.</string>
    <string name="text_ex5_step2">Lift your right knee off the ground, making your right leg straight and strong</string>
    <string name="text_ex5_step3">Keeping your hands firmly on the ground, jump to switch leg positions.</string>
    <string name="text_ex5_step4">Now your left leg should be fully extended while your right knee is placed under your chest, and your hands firmly on the ground.\nMake sure to maintain your body weight on both legs. </string>
    <string name="text_ex6_step1">Suggested number of reps: 15 \n\nCome to a hands and knees position (quadruped) on the ground with your hands directly under your shoulders, fingers facing forward, and knees under your hips.</string>
    <string name="text_ex6_step2">Reach one leg out and away followed by the other leg, bringing you to a plank position.\nYour head should be aligned with your spine. </string>
    <string name="text_ex6_step3">Slowly bend the elbows, lowering your body toward the floor.\nKeep your head aligned with your spine.\nDo not allow your low back or ribcage to sag or your hips to hike upward. </string>
    <string name="text_ex6_step4">Straighten the elbows, pressing upward through your arms.\nAs you straighten the arms, lift your left foot off the floor, keeping the knee straight.\nContinue pressing until the elbows are straight and your left leg is off the floor.</string>
    <string name="text_ex6_step5">Hold this position briefly before returning to your starting position.\nRepeat the push up alternating legs with each repetition.</string>
    <string name="text_ex7_step1">Suggested number of reps: 10\n\nLie down on your back on a flat surface. Put the soles of your feet together with your knees pointing out to the sides, so your kneecaps are as far away from one another as they can be.\nPull your feet towards your torso, keeping your feet centered and together at the soles.</string>
	<string name="text_ex7_step2">Stretch your arms straight in front of your chest towards the ceiling. Straighten your elbows and clasp your hands together.</string>
	<string name="text_ex7_step3">Bring your clasped hands slowly to rest on the floor behind your head. Try to touch the ground, but keep your arms straight.\nIf your arms bend as you approach the floor, start over and stop above the ground just before your arms begin to bend.</string>
	<string name="text_ex7_step4">Bring your hands back to their original positions, then repeat.\nContinue these overhead and pullback motions for however long you like, keeping your limbs controlled and moving smoothly throughout the exercise.</string>
    <string name="text_ex8_step1">Suggested number of reps: 20\nPre-requisite: a stability ball or a big pillow\n\nBegin this with your body directly on top of the ball. The ball should be placed beneath your abdomen, the stretch your legs on the floor. Take a few deep breaths before you start.</string>
    <string name="text_ex8_step2">Try to gently squeeze the ball between your hands to create more strength and stability.</string>
    <string name="text_ex8_step3">Slowly press your body upward until your elbows are straight.\nKeep your body straight for a few seconds and then return to the start position.</string>
    <string name="text_complete_ex_button">Complete exercise</string>
	<string name="text_breakfast">Breakfast</string>
    <string name="text_snack">Snack</string>
    <string name="text_lunch">Lunch</string>
    <string name="text_dinner">Dinner</string>
    <string name="text_preWO">Pre-workout</string>
    <string name="text_postWO">Post-workout</string>
    <string name="text_d1">Eating healthier</string>
    <string name="text_d2">Weight loss</string>
    <string name="text_d3">Staying slim</string>
    <string name="text_d4">Muscle gain</string>
    <string name="text_d5">Eating healthier #2</string>
    <string name="text_d6">Weight loss #2</string>
    <string name="text_d7">Get ripped</string>
    <string name="text_d8">Eating healthier #3</string>
    <string name="text_d9">Weight loss #3</string>
    <string name="text_d8_breakfast">Muesli\nPorridge or all-bran cereal</string>
    <string name="text_d8_snack1">Riveta biscuits with a slice of ham</string>
    <string name="text_d8_lunch">Salad with grilled mackerel\nFruit based smoothies or Tea without sugar</string>
    <string name="text_d8_dinner">Poached chicken flavored with fresh lemon and zest, 100g boiled rice, Steamed green vegetables\nFruit based smoothies or Tea without sugar</string>
    <string name="text_d8_snack3">Riveta biscuits with a slice of ham\n Tea without sugar or fruit based smoothies</string>
    <string name="text_d2_breakfast">Ham and mushroom omelette</string>
    <string name="text_d2_snack1">Nuts and fish oil</string>
    <string name="text_d2_lunch">Homemade tuna salad</string>
    <string name="text_d2_snack2">Chicken and vegetables</string>
    <string name="text_d2_snack3">Protein shake and fruit</string>
    <string name="text_d2_dinner">Chicken stir fry with brown rice</string>
	<string name="text_d4_breakfast">Pick and/or mix:\nSkim cheese/yogurt\nOatmeal/buckwheat porridge\nCup of tea or milk\n2–3 whole eggs(scrambled, fried or omelette)</string>
    <string name="text_d4_snack1">2–3 slices of cheese</string>
    <string name="text_d4_lunch">Pick and/or mix:\nSeafood, fish, meat (do not fry!)\nBrown rice\nMacaroni/pasta\nBuckwheat\nPotatoes (do not fry!)</string>
    <string name="text_d4_snack2">Pick and/or mix:\nFruits\nNuts\n30g of chocolate\nDried fruits</string>
    <string name="text_d4_dinner">Pick and/or mix:\nSteamed vegetables\nSteamed fish</string>
    <string name="text_d4_snack3">A cup of green tea/milk</string>
    <string name="text_d1_breakfast">3 whole eggs, 2 egg white\nGrilled bacon\n1 tomato\n2 bagels\nFruit juice (0.5l)</string>
    <string name="text_progress">Progress</string>
    <string name="text_level">Level:</string>
    <string name="text_experience">Experience gained:</string>
    <string name="text_value_currentLvl">1</string>
    <string name="text_value_currentExp">0</string>
    <string name="text_compExToday">Exercises done today:</string>
    <string name="text_value_compExToday">0</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_yourPerfToday">Performance today:</string>
    <string name="text_default_perf">You did a good job!</string>
</resources>